@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
 
-AC_INIT([GNU make],[3.81a1],[bug-make@gnu.org])
+AC_INIT([GNU make],[3.81a2],[bug-make@gnu.org])
 
-AC_PREREQ(2.56)
+AC_PREREQ(2.57)
 
 AC_REVISION([[$Id$]])
 
